Fix for bug 2503124 "convertUnwrappedNumber in BeansWrapper rounds Float/Double"